gdkpixbufoverlay: Allow negative offsets to specify offset from bottom/right

https://bugzilla.gnome.org/show_bug.cgi?id=702826